--- a/Demo01/index.html
+++ b/Demo01/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
     </section>
-    <script type="text/javascript" src="https://popupsmart.com/freechat.js"></script><script> window.start.init({ title: "Hi there ✌️", message: "How may we help you? Just send us a message now to get assistance.", color: "#3BCE79", position: "right", placeholder: "Enter your message", withText: "Write with", viaWhatsapp: "Or write us directly via Whatsapp", gty: "Go to your", awu: "and write us", connect: "Connect now",  button: "Write us", device: "everywhere", logo: "https://d2r80wdbkwti6l.cloudfront.net/gBbY6anfBoZ35WXylJWwJsSkG1eBa6EU.jpg", person: "https://d2r80wdbkwti6l.cloudfront.net/16fCT2WGIKDNVdzo8KEcERggKPdoIBz7.jpg",  services: [{"name":"line","content":"https://line.me/ti/p/SyH1Ut4Dk9"}]})</script>
+    <script type="text/javascript" src="https://popupsmart.com/freechat.js"></script><script> window.start.init({ title: "Hi there ✌️", message: "How may we help you? Just send us a message now to get assistance.", color: "#3BCE79", position: "right", placeholder: "Enter your message", withText: "Write with", viaWhatsapp: "Or write us directly via Whatsapp", gty: "Go to your", awu: "and write us", connect: "Connect now",  button: "Write us", device: "everywhere", logo: "https://d2r80wdbkwti6l.cloudfront.net/gBbY6anfBoZ35WXylJWwJsSkG1eBa6EU.jpg", person: "https://d2r80wdbkwti6l.cloudfront.net/16fCT2WGIKDNVdzo8KEcERggKPdoIBz7.jpg",  services: [{"name":"line","content":"https://lin.ee/pT6Ap7q"}]})</script>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <!-- AOS -->
