--- a/Demo01/index.html
+++ b/Demo01/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/banner.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -71,7 +72,9 @@
             </div>
         </div>
     </section>
-    <script type="text/javascript" src="https://popupsmart.com/freechat.js"></script><script> window.start.init({ title: "Hi there ✌️", message: "How may we help you? Just send us a message now to get assistance.", color: "#3BCE79", position: "right", placeholder: "Enter your message", withText: "Write with", viaWhatsapp: "Or write us directly via Whatsapp", gty: "Go to your", awu: "and write us", connect: "Connect now",  button: "Write us", device: "everywhere", logo: "https://d2r80wdbkwti6l.cloudfront.net/gBbY6anfBoZ35WXylJWwJsSkG1eBa6EU.jpg", person: "https://d2r80wdbkwti6l.cloudfront.net/16fCT2WGIKDNVdzo8KEcERggKPdoIBz7.jpg",  services: [{"name":"line","content":"https://lin.ee/pT6Ap7q"}]})</script>
+    <a href="https://lin.ee/pT6Ap7q" target="_blank" class="LineBt">
+        <img src="./images/line.png" alt="" style="width: 100%;" />
+    </a>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <!-- AOS -->
